--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -8,16 +8,25 @@
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /*Shorthand - Background
+            color > image > position > repeat > [size]
+            > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,7 +37,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nobis repellat harum? Sit sequi officia, doloribus explicabo earum fuga vero saepe provident numquam eligendi officiis, eum fugiat libero consequatur sed. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto quis sequi repellat consequatur, molestiae ducimus reiciendis ab rerum praesentium harum dolorem dolores enim magni voluptate nemo corrupti, velit dolore earum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque suscipit blanditiis doloremque debitis praesentium enim ducimus harum atque, magnam, dignissimos numquam sunt quibusdam minima architecto autem eligendi quod eum nihil.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nobis repellat harum? Sit sequi officia, doloribus explicabo earum fuga vero saepe provident numquam eligendi officiis, eum fugiat libero consequatur sed. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto quis sequi repellat consequatur, molestiae ducimus reiciendis ab rerum praesentium harum dolorem dolores enim magni voluptate nemo corrupti, velit dolore earum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque suscipit blanditiis doloremque debitis praesentium enim ducimus harum atque, magnam, dignissimos numquam sunt quibusdam minima architecto autem eligendi quod eum nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius autem quis deserunt expedita veritatis reiciendis consectetur neque similique eum, dolor, distinctio nesciunt nobis dolore adipisci unde recusandae rerum cum error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quasi, dolorum commodi adipisci, obcaecati eius possimus eveniet blanditiis odit neque numquam! Mollitia rem consequatur minima praesentium magni blanditiis officiis cupiditate? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore asperiores repellendus sequi vero soluta nobis voluptas sunt cumque, voluptatum, quas quasi nostrum est mollitia, pariatur laudantium delectus itaque ipsam quibusdam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus quo quos numquam dignissimos optio veniam corporis dolore omnis ipsam pariatur recusandae, beatae totam culpa? Blanditiis ad optio hic quas? Voluptatem! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum dignissimos officia molestiae atque odio enim, recusandae animi voluptas voluptates nobis soluta quo harum sequi esse facilis fugiat minima quia ratione! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia ab similique tenetur vitae dolore enim cumque maxime repellendus animi, perferendis tempore alias, dolorum harum quam suscipit dolorem officia commodi ex? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt autem asperiores ea vel esse iusto voluptas eveniet hic repellat perspiciatis consequatur veritatis earum facilis tenetur exercitationem, quos at! Debitis, molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor distinctio aliquid tempora quaerat, vel et enim ex perspiciatis totam possimus commodi qui quae soluta eum magni eveniet repudiandae placeat doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure natus voluptatum, deserunt eligendi amet animi molestiae sunt doloremque repudiandae dolor voluptate nemo accusamus expedita vero placeat necessitatibus totam esse consequatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, ad. Dolorem optio maxime nemo facilis voluptate nam quod delectus repudiandae, recusandae consequatur pariatur dolorum voluptatem adipisci architecto id sequi assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Est inventore deserunt adipisci doloribus quod assumenda consequuntur earum mollitia! Molestiae omnis officia repellendus! Distinctio ipsa quas vero vel dolore suscipit quidem? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis numquam sint nobis labore iure id enim accusamus? Animi obcaecati laborum voluptatibus magni. Rerum magnam ad iure nemo ratione fuga fugit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est natus aperiam iure labore incidunt sapiente libero et cum ipsam magnam unde, repellat placeat obcaecati laudantium voluptas eos dolor quod excepturi.</p>
     </main>
     
 </body>
