--- a/exercicios/desafios/d012/index.html
+++ b/exercicios/desafios/d012/index.html
@@ -15,7 +15,7 @@
 
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -27,7 +27,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -39,7 +39,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -58,7 +58,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -71,15 +71,17 @@
     </section>
 
     <section>
-        <p>
+       <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
             Mas quando vou prosear <br>
             A pessoa foi embora <br>
             Abriu outro aplicativo <br>
             O mundo ficou cativo <br>
-            Da tecnologia do agora. <br>
-            Felizmente, pra orar <br>
+            Da tecnologia do agora.
+        </p>
+        
+        <p> Felizmente, pra orar <br>
             Não precisa de internet <br>
             Deus escuta todo mundo <br>
             Se quiser, faça esse teste <br>
