--- a/exercicios/ex026/mq05/index.html
+++ b/exercicios/ex026/mq05/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <title>Media Query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+            </span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -29,6 +33,15 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut eos iusto labore laudantium veniam reiciendis hic nesciunt asperiores! At minus molestiae eligendi! Id excepturi incidunt dolor mollitia, temporibus reprehenderit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde earum harum iusto? Commodi exercitationem voluptates, id quae ullam nulla earum, a, vitae iste fuga laudantium est hic repellat. Saepe, laudantium.</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
     
 </body>
 </html>
